<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Dialogs.DialogActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/dialog_margin"
        android:layout_marginStart="@dimen/dialog_margin"
        android:background="@drawable/dialog_background"
        android:transitionName="@string/transition_dialog"
        android:elevation="@dimen/dialog_elevation"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

       <EditText
           android:id="@+id/productScanET"
           android:hint="@string/scan_product_text"
           android:textStyle="italic"
           android:textColorHint="@color/colorPrimaryDark"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/scannedProductTV"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:text="@string/close_button"
            android:textColor="#fff"
            android:textAppearance="?android:textAppearanceMedium"/>
        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/btn_background"
            android:layout_marginTop="20dp"
            android:text="@string/save_button"
            android:textColor="#fff"
            android:textAppearance="?android:textAppearanceMedium"/>
</RelativeLayout>
    </LinearLayout>

</FrameLayout>