<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/container"
android:layout_width="match_parent"
android:layout_height="320dp"
android:layout_gravity="center"
android:layout_marginEnd="@dimen/dialog_margin"
android:layout_marginStart="@dimen/dialog_margin"
android:background="@drawable/dialog_background"
android:transitionName="@string/transition_dialog"
android:elevation="@dimen/dialog_elevation"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_margin="2dp">

            <Button
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="left"
                android:background="@drawable/btn_background"
                android:text="@string/cancel_button"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/totalPriceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="19.99"
                android:textSize="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="right"
                android:background="@drawable/btn_background"
                android:text="@string/finish_order"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#fff" />

        </RelativeLayout>

</LinearLayout>